# derive-aliases

./: Cargo.toml
proc_macro/src/: derive.rs  lib.rs
src/: lib.rs
tests/: expect_attr.rs  hygiene.rs  linearize.rs  linearize_cfg_attr.rs  test.rs
tests/test_derive/: Cargo.toml
tests/test_derive/src/: lib.rs
