resolver = "2"

[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_aliases_proc_macro = { path = "proc_macro", version = "0.4", features = ["show"] }

[workspace]
members = [".", "proc_macro", "tests/test_derive"]

[workspace.package]
version = "0.4.9"
edition = "2021"
rust-version = "1.75"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias", "macro_rules_attribute", "proc-macro"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc", "rust-patterns"]

[dev-dependencies]
# only used in doc example
zerocopy = { version = "0.8", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.14.1"
test_derive = { path = "tests/test_derive" }
