[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_aliases_proc_macro = { path = "proc_macro", version = "0.4" }

[workspace]
resolver = "2"
members = [".", "proc_macro"]

[workspace.package]
version = "0.4.9"
edition = "2021"
rust-version = "1.75"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias", "macro_rules_attribute", "proc-macro"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc", "rust-patterns"]

[features]
# internal feature, for test suite of `derive_aliases`
__integration_test = ["derive_aliases_proc_macro/__integration_test"]

[dev-dependencies]
# only used in doc example
derive_aliases = { path = ".", features = ["__integration_test"] }
zerocopy = { version = "0.8", features = ["derive"] }
trybuild = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.18.0"
evil = "0.2.2"
tempfile = "3.27.0"
serde_json = "1.0.149"
fs-err = "3.3.0"
serde_cursor = { version = "0.3", features = ["serde_with"] }
monostate = "1.0"
itertools = "0.14.0"
annotate-snippets = "0.12.13"
anstream = "1.0.0"
pretty_assertions = "1.4.1"
linearize = { version = "0.1", features = ["derive"] }

[lints.rust]
unexpected-cfgs = "allow"
